# family

./: .gitignore  CHANGELOG.md  LICENSE  cabal-jsbackend.project  cabal.project  cabal.project.freeze  default-nix.nix  default.nix  family.cabal  shell-jsbackend.nix
.github/workflows/: haskell-release-dev.yml  haskell-release-nightly.yml  haskell-release-prod.yml  main.yml  nix.yml.disabled
src/: Main.hs
