cabal-version:       3.4
-- Newer versions complain
name:                family
version:             0.0.0
synopsis:            Family stuff
homepage:            https://github.com/danwdart/family
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
category:            Genealogy
extra-source-files:  CHANGELOG.md
build-type:          Simple

executable family
  main-is:             Main.hs
  default-language:    GHC2021
  default-extensions:  UnicodeSyntax
  build-depends:       base >=4.17.0.0
                     , gedcom >= 0.0.3.0
                     , text
                     , transformers
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
