cabal-version:      3.12

-- Newer versions complain
name:               family
version:            0.2.0.0
synopsis:           Family stuff
homepage:           https://github.com/danwdart/family
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
category:           Genealogy
extra-source-files: CHANGELOG.md
build-type:         Simple

executable family
  main-is:            Main.hs
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  build-depends:
    , base    ^>=4.21.0.0
    , gedcom  ^>=0.3.2.0
    , mtl     ^>=2.3.1
    , text    ^>=2.1.2

  hs-source-dirs:     src
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
